former attempt to remove highlight on mobile resulted in border glitching. this push will try to fix that

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ body{
 .boardCell{
     cursor: pointer;
     position: relative;
-    -webkit-tap-highlight-color: rgb(14, 57, 94);
+    -webkit-tap-highlight-color: transparent;
 }
 .boardCell:active{
     background-color: rgb(14, 57, 94);
